# talu

./: .gitignore  Dockerfile  LICENSE  README.md  dependencies.txt  docker-compose-all.yml  docker-compose-frpc.yml  docker-compose.yml  dockerfile  start.sh
backend/: .env  docker-compose.yml  dockerfile  environment.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: .env  config.py  initialize_db.py  load_env.py  models.py  schemas.py  utils.py
backend/app/api/: __init__.py  access_control.py  agent.py  chat.py  data_store.py  knowledge.py  order.py  prompt.py  send_mail.py  sse_format.py  user.py
backend/app/api/agent/: __init__.py  default_agent.py  load_agent.py  load_tools.py
backend/app/api/chain/: __init__.py  chat.py
backend/app/api/chat/: __init__.py  chain.py  chat.py  longcall_memory.py  memory.py  rag_chat.py
backend/app/api/common/: auth.py  order.py  send_mail.py  user.py
backend/app/api/conversation/: __init__.py
backend/app/api/node/: chain.py
backend/app/db_data/: agent.py
backend/script/: add_link.py  avatar.py  init.sql  password.py  replace_agent.py  replace_cover_image_url.py
backend/script/sql/: insert_init.sql
backend/src/: .env  database.py  utils.py
backend/src/router/: __init__.py  agent.py  auth.py  chat.py  image.py  loadlib.py  to_vector.py
backend/tests/: agent.py  cast.py  db.py  gpt_agents.csv  store.py  test_api.py  test_data_store.py  test_web_browse.py
backend/tests/agents/: agents_writer.py
backend/tests/tech_test/: agent_test.py  browse_test.py  chain_test.py  gpts_store.py  rag_test.py  selenium.py  test.html  test_chat.py  test_extract_img_des.py  test_split.py  test_uuid.py  tools_test.py  wechat_url_test.py
(+207 files in other folders)
