[tool.poetry]
name = "talu"
version = "0.1.0"
description = ""
authors = ["fucheng <fucheng@123qiming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = {extras = ["all"], version = "^0.2.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
